timed (2.36) unstable; urgency=low

  * new csd layer, better cellular stuff logging

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 11 Jan 2011 18:10:57 +0200

timed (2.35) unstable; urgency=low

  * Fixes: NB#208557 - sleeping in shutdown / reboot modes

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 11 Jan 2011 11:51:29 +0200

timed (2.34) unstable; urgency=low

  * Fixes: NB#211609 - timed is using too much memory for clock alarms

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 10 Jan 2011 17:42:46 +0200

timed (2.33) unstable; urgency=low

  * extract version number from debian/changelog
  * Fixes: NB#205616 - get rid of timehd and timehd-dbg
  * Even more printing in case of inconsistent user/actdead state

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 04 Jan 2011 14:11:34 +0200

timed (2.32) unstable; urgency=low

  * fake method to test operator change
  * don't terminate daemon if can't fork for action
  * Fixes: NB#213888 - snoozed events reshuffled 2 seconds back if operator changed

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 28 Dec 2010 20:31:47 +0200

timed (2.31) unstable; urgency=low

  * Fixes: NB-210287 - timed doesn't have CAP_SYS_TIME
  * More printing in case of inconsistent user/actdead state
  * removed dependency of the old timehd package
  * Fixes: NB#210336 - pc files
  * Fixes: NB#209981 - less log_info, more log_debug
  * Fixes: NB#208557 - new act-dead / user detection
  * a memory leak fixed
  * refactored event flow and some structures
  * Fixes: NB#214062 - libtimed triggers dbus introspection even if it is not needed

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 27 Dec 2010 12:33:17 +0200

timed (2.30) unstable; urgency=low

  * Fixes: NB#208737 - setting clock alarm to skipped hour is making timed unusable

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 03 Dec 2010 16:34:14 +0200

timed (2.29) unstable; urgency=low

  * making time zone handling more strict
